fixed overlap

--- a/css/contact.css
+++ b/css/contact.css
@@ -48,7 +48,6 @@ footer {
 header a {
     padding: 2vw;
     text-decoration: none;
-    position: absolute;
     color: black;
     font-family: 'Mate SC';
     font-size: 3em;
